Ensure WebAuthn UX is keyboard-accessible.

Previously, the dialog never received keyboard focus because often there
was no default dialog button, so DialogDelegate::GetInitiallyFocusedView
would return nullptr.

This CL provides a custom implementation to this method, so the
initially focused view will be selected in the following order:

 1. Step-specific content, e.g. transport selection list, if any.
 2. Accept button, if visible and enabled.
 3. Other transport selection button, if visible.
 4. `Cancel` / `Close` button.

Bug: 883211
Change-Id: I97b8f4058a0e3183f8f4ead7da8d437b20a3f560
Reviewed-on: https://chromium-review.googlesource.com/1221264
Reviewed-by: Dominic Mazzoni <dmazzoni@chromium.org>
Commit-Queue: Balazs Engedy <engedy@chromium.org>
Cr-Commit-Position: refs/heads/master@{#590817}
Former-commit-id: 6d05cdad27801b0f41caa2950f9d2e95f0094733